can break tools